@@ -39,7 +39,7 @@ file viewing.  Can be used in conjunction with \fB\-v\fR,\fB\-\-vcd\fR.
 Specify savefile name.  Useful suffixes for desktop integration are .gtkw and .sav (deprecated).
 .TP
 \fB\-A\fR,\fB\-\-autosavename\fR
-Assume savefile is suffix modified dumpfile name.
+Assume savefile is suffix modified dumpfile name (i.e., remove and replace with ".gtkw").
 .TP
 \fB\-r\fR,\fB\-\-rcfile\fR <\fIfilename\fP>
 Specify override \fI.gtkwaverc\fP filename.
